--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bigpixel-e-commerce",
+  "name": "frontend-bigpixel-ecommerce",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "start": "serve dist",
